<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_1"
    android:layoutDirection="ltr"

    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#503F097E"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="false"
        android:focusable="false">

        <!--<com.balysv.materialripple.MaterialRippleLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            style="@style/RippleStyleGray"
            >-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="24dp"
                    android:fontFamily="@font/ceviche_one"
                    android:text="@string/image_effects_title"
                    android:textColor="#5588ff"
                    android:textSize="18sp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:id="@+id/img_remove"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/img2_pn"
                            android:clickable="false"
                            android:focusable="false"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/Imgremover"
                            android:clickable="false"
                            android:focusable="false"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/img_replace"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/downloaded_1_png"
                            android:clickable="false"
                            android:focusable="false"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/Imgreplacer"
                            android:clickable="false"
                            android:focusable="false"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/img_cam"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/img5"
                            android:clickable="false"
                            android:focusable="false"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ImgCam"
                            android:clickable="false"
                            android:focusable="false"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="24dp"
                    android:fontFamily="@font/ceviche_one"
                    android:text="@string/video_effects_title"
                    android:textColor="#5588ff"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/vid_remove"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/img7"
                            android:clickable="false"
                            android:focusable="false"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/Vidremover"
                            android:clickable="false"
                            android:focusable="false"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/vid_replace"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/img4"
                            android:clickable="false"
                            android:focusable="false"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/Vidreplacer"
                            android:clickable="false"
                            android:focusable="false"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/vid_cam"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/img9"
                            android:clickable="false"
                            android:focusable="false"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/VidCam"
                            android:clickable="false"
                            android:focusable="false"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/vid_vid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/img7"
                            android:clickable="false"
                            android:focusable="false"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/VidVid"
                            android:clickable="false"
                            android:focusable="false"/>
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>